bodhi-aws-main/deployment/distribution/psap/deployment.yaml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: psap
  namespace: psap
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: psap
  replicas: 1 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: psap
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: psap
          image: nginx
          ports:
            - containerPort: 80
