bodhi-aws-main/deployment/distribution/psap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: psap
  namespace: psap
spec:
  selector:
    app: psap
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
